--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Create Form -->
-<form id="form" name="survey-form" action="/Form_Page/form.html">
+<form id="form" name="survey-form">
 
     <!-- Details -->
     <div class="form-control">
@@ -55,7 +55,6 @@
          
         <!-- Dropdown options -->
         <select name="role" id="role">
-            <option value="">None</option>
             <option value="student">Student</option>
             <option value="intern">Intern</option>
             <option value="professional">Professional</option>
@@ -132,12 +131,7 @@
         <textarea name="comment" id="comment" rows="5" placeholder="Enter your comment here"></textarea>
     </div>
     <!-- Multi-line Text Input Control -->
-    <input type="submit" value="Submit" onclick="fun()" class="button">
+    <button type="submit" value="submit">Submit</button>
 </form>
-<script>
-    function fun(){
-        document.getElementById('form').reset();
-    }
-</script>
 </body>
 </html>
